# birdtorrent_rs

./: Cargo.toml  LICENSE  README.org
.github/: dependabot.yml
src/: bencoding.rs  client.rs  file.rs  lib.rs  message.rs  p2p.rs  torrent.rs  tracker.rs  utility.rs
src/bencoding/: btype.rs  mod.rs
src/tracker/: http.rs  mod.rs  udp.rs
