[package]
name = "birdtorrent_rs"
version = "0.1.0"
authors = ["dfireBird <aadhishrm11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
reqwest = { version = "0.10"}
tokio = { version = "0.2", features = ["full"] }
sha-1 = "0.9.0"
rand = "0.8.0"